welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:18: error: not found: value fleur
  fleur(d)
  ^FlowerPot:22: error: not found: value fleur
  fleur(e)
  ^FlowerPot:38: error: not found: value fleur
  fleur(Color.orange)
  ^